--- a/ServerState/ServerState.csproj
+++ b/ServerState/ServerState.csproj
@@ -152,6 +152,8 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\failicon.png" />
+    <Content Include="Content\Images\passicon.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
